# external-connectivity

./: .clang-format  .clangd  .gitignore  .gitmodules  BleUtils.cpp  CMakeLists.txt  Kconfig  README.md  sdkconfig.defaults
.github/workflows/: build-project.yml  build.yml
components/external-connectivity/: CMakeLists.txt  Kconfig
components/external-connectivity/include/: BleService.hpp  BleUtils.hpp  GsmService.hpp  HttpClient.hpp  InternalMappings.hpp  LoraService.hpp  ModemConsole.hpp
components/external-connectivity/src/: BleService.cpp  BleUtils.cpp  GsmService.cpp  HttpClient.cpp  LoraService.cpp  ModemConsole.cpp
include/: BleService.hpp  Console.hpp  GsmService.hpp  HttpClient.hpp  LoraService.hpp  ModemConsole.hpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
src/: BLEService.cpp  BleService.cpp  Console.cpp  GsmService.cpp  HttpClient.cpp  LoraService.cpp  ModemConsole.cpp
